Fix pagination layout bug

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -4,7 +4,8 @@
 // there are no more previous or next posts to show.
 
 .pagination {
-  display: flex;
+  display: block;
+  overflow: hidden;
   margin: 0 -1.5rem var(--spacer);
   color: var(--gray-500);
   text-align: center;
